grammar/ExampleParser.cpp

// Generated from Example.g4 by ANTLR 4.13.1


#include "ExampleListener.h"
#include "ExampleVisitor.h"

#include "ExampleParser.h"


using namespace antlrcpp;

using namespace antlr4;

namespace {

struct ExampleParserStaticData final {
  ExampleParserStaticData(std::vector<std::string> ruleNames,
                        std::vector<std::string> literalNames,
                        std::vector<std::string> symbolicNames)
      : ruleNames(std::move(ruleNames)), literalNames(std::move(literalNames)),
        symbolicNames(std::move(symbolicNames)),
        vocabulary(this->literalNames, this->symbolicNames) {}

  ExampleParserStaticData(const ExampleParserStaticData&) = delete;
  ExampleParserStaticData(ExampleParserStaticData&&) = delete;
  ExampleParserStaticData& operator=(const ExampleParserStaticData&) = delete;
  ExampleParserStaticData& operator=(ExampleParserStaticData&&) = delete;

  std::vector<antlr4::dfa::DFA> decisionToDFA;
  antlr4::atn::PredictionContextCache sharedContextCache;
  const std::vector<std::string> ruleNames;
  const std::vector<std::string> literalNames;
  const std::vector<std::string> symbolicNames;
  const antlr4::dfa::Vocabulary vocabulary;
  antlr4::atn::SerializedATNView serializedATN;
  std::unique_ptr<antlr4::atn::ATN> atn;
};

::antlr4::internal::OnceFlag exampleParserOnceFlag;
#if ANTLR4_USE_THREAD_LOCAL_CACHE
static thread_local
#endif
ExampleParserStaticData *exampleParserStaticData = nullptr;

void exampleParserInitialize() {
#if ANTLR4_USE_THREAD_LOCAL_CACHE
  if (exampleParserStaticData != nullptr) {
    return;
  }
#else
  assert(exampleParserStaticData == nullptr);
#endif
  auto staticData = std::make_unique<ExampleParserStaticData>(
    std::vector<std::string>{
      "program", "block", "header", "list", "listItem", "checkbox", "quote", 
      "paragraph", "fencedCodeBlock", "indentedCodeBlock", "inline", "link", 
      "image", "bold", "italic", "urlContent", "emptyLine"
    },
    std::vector<std::string>{
      "", "'x'", "'X'", "", "", "'**'", "'*'", "", "'['", "']'", "'('", 
      "')'", "'!'", "'>'", "", "'-'"
    },
    std::vector<std::string>{
      "", "", "", "FENCED_CODE", "INLINE_CODE", "DOUBLESTAR", "STAR", "INDENTED_CODE", 
      "LBRACK", "RBRACK", "LPAREN", "RPAREN", "EXCL", "GT", "HASHES", "DASH", 
      "NEWLINE", "WS", "TEXT"
    }
  );
  staticData->serializedATN = antlr4::atn::SerializedATNView(serializedATNSegment, sizeof(serializedATNSegment) / sizeof(serializedATNSegment[0]));

  antlr4::atn::ATNDeserializer deserializer;
  staticData->atn = deserializer.deserialize(staticData->serializedATN);

  const size_t count = staticData->atn->getNumberOfDecisions();
  staticData->decisionToDFA.reserve(count);
  for (size_t i = 0; i < count; i++) { 
    staticData->decisionToDFA.emplace_back(staticData->atn->getDecisionState(i), i);
  }
  exampleParserStaticData = staticData.release();
}

}

ExampleParser::ExampleParser(TokenStream *input) : ExampleParser(input, antlr4::atn::ParserATNSimulatorOptions()) {}

ExampleParser::ExampleParser(TokenStream *input, const antlr4::atn::ParserATNSimulatorOptions &options) : Parser(input) {
  ExampleParser::initialize();
  _interpreter = new atn::ParserATNSimulator(this, *exampleParserStaticData->atn, exampleParserStaticData->decisionToDFA, exampleParserStaticData->sharedContextCache, options);
}

ExampleParser::~ExampleParser() {
  delete _interpreter;
}

const atn::ATN& ExampleParser::getATN() const {
  return *exampleParserStaticData->atn;
}

std::string ExampleParser::getGrammarFileName() const {
  return "Example.g4";
}

const std::vector<std::string>& ExampleParser::getRuleNames() const {
  return exampleParserStaticData->ruleNames;
}

const dfa::Vocabulary& ExampleParser::getVocabulary() const {
  return exampleParserStaticData->vocabulary;
}

antlr4::atn::SerializedATNView ExampleParser::getSerializedATN() const {
  return exampleParserStaticData->serializedATN;
}


//----------------- ProgramContext ------------------------------------------------------------------

ExampleParser::ProgramContext::ProgramContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* ExampleParser::ProgramContext::EOF() {
  return getToken(ExampleParser::EOF, 0);
}

std::vector<ExampleParser::BlockContext *> ExampleParser::ProgramContext::block() {
  return getRuleContexts<ExampleParser::BlockContext>();
}

ExampleParser::BlockContext* ExampleParser::ProgramContext::block(size_t i) {
  return getRuleContext<ExampleParser::BlockContext>(i);
}


size_t ExampleParser::ProgramContext::getRuleIndex() const {
  return ExampleParser::RuleProgram;
}

void ExampleParser::ProgramContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<ExampleListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterProgram(this);
}

void ExampleParser::ProgramContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<ExampleListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitProgram(this);
}


std::any ExampleParser::ProgramContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<ExampleVisitor*>(visitor))
    return parserVisitor->visitProgram(this);
  else
    return visitor->visitChildren(this);
}

ExampleParser::ProgramContext* ExampleParser::program() {
  ProgramContext *_localctx = _tracker.createInstance<ProgramContext>(_ctx, getState());
  enterRule(_localctx, 0, ExampleParser::RuleProgram);
  size_t _la = 0;

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(37);
    _errHandler->sync(this);
    _la = _input->LA(1);
    while ((((_la & ~ 0x3fULL) == 0) &&
      ((1ULL << _la) & 523768) != 0)) {
      setState(34);
      block();
      setState(39);
      _errHandler->sync(this);
      _la = _input->LA(1);
    }
    setState(40);
    match(ExampleParser::EOF);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- BlockContext ------------------------------------------------------------------

ExampleParser::BlockContext::BlockContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

ExampleParser::HeaderContext* ExampleParser::BlockContext::header() {
  return getRuleContext<ExampleParser::HeaderContext>(0);
}

ExampleParser::ListContext* ExampleParser::BlockContext::list() {
  return getRuleContext<ExampleParser::ListContext>(0);
}

ExampleParser::QuoteContext* ExampleParser::BlockContext::quote() {
  return getRuleContext<ExampleParser::QuoteContext>(0);
}

ExampleParser::ParagraphContext* ExampleParser::BlockContext::paragraph() {
  return getRuleContext<ExampleParser::ParagraphContext>(0);
}

ExampleParser::FencedCodeBlockContext* ExampleParser::BlockContext::fencedCodeBlock() {
  return getRuleContext<ExampleParser::FencedCodeBlockContext>(0);
}

ExampleParser::IndentedCodeBlockContext* ExampleParser::BlockContext::indentedCodeBlock() {
  return getRuleContext<ExampleParser::IndentedCodeBlockContext>(0);
}

ExampleParser::EmptyLineContext* ExampleParser::BlockContext::emptyLine() {
  return getRuleContext<ExampleParser::EmptyLineContext>(0);
}


size_t ExampleParser::BlockContext::getRuleIndex() const {
  return ExampleParser::RuleBlock;
}

void ExampleParser::BlockContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<ExampleListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterBlock(this);
}

void ExampleParser::BlockContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<ExampleListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitBlock(this);
}


std::any ExampleParser::BlockContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<ExampleVisitor*>(visitor))
    return parserVisitor->visitBlock(this);
  else
    return visitor->visitChildren(this);
}

ExampleParser::BlockContext* ExampleParser::block() {
  BlockContext *_localctx = _tracker.createInstance<BlockContext>(_ctx, getState());
  enterRule(_localctx, 2, ExampleParser::RuleBlock);

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    setState(49);
    _errHandler->sync(this);
    switch (getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 1, _ctx)) {
    case 1: {
      enterOuterAlt(_localctx, 1);
      setState(42);
      header();
      break;
    }

    case 2: {
      enterOuterAlt(_localctx, 2);
      setState(43);
      list();
      break;
    }

    case 3: {
      enterOuterAlt(_localctx, 3);
      setState(44);
      quote();
      break;
    }

    case 4: {
      enterOuterAlt(_localctx, 4);
      setState(45);
      paragraph();
      break;
    }

    case 5: {
      enterOuterAlt(_localctx, 5);
      setState(46);
      fencedCodeBlock();
      break;
    }

    case 6: {
      enterOuterAlt(_localctx, 6);
      setState(47);
      indentedCodeBlock();
      break;
    }

    case 7: {
      enterOuterAlt(_localctx, 7);
      setState(48);
      emptyLine();
      break;
    }

    default:
      break;
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- HeaderContext ------------------------------------------------------------------

ExampleParser::HeaderContext::HeaderContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* ExampleParser::HeaderContext::HASHES() {
  return getToken(ExampleParser::HASHES, 0);
}

tree::TerminalNode* ExampleParser::HeaderContext::NEWLINE() {
  return getToken(ExampleParser::NEWLINE, 0);
}

std::vector<tree::TerminalNode *> ExampleParser::HeaderContext::WS() {
  return getTokens(ExampleParser::WS);
}

tree::TerminalNode* ExampleParser::HeaderContext::WS(size_t i) {
  return getToken(ExampleParser::WS, i);
}

std::vector<ExampleParser::InlineContext *> ExampleParser::HeaderContext::inline_() {
  return getRuleContexts<ExampleParser::InlineContext>();
}

ExampleParser::InlineContext* ExampleParser::HeaderContext::inline_(size_t i) {
  return getRuleContext<ExampleParser::InlineContext>(i);
}


size_t ExampleParser::HeaderContext::getRuleIndex() const {
  return ExampleParser::RuleHeader;
}

void ExampleParser::HeaderContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<ExampleListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterHeader(this);
}

void ExampleParser::HeaderContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<ExampleListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitHeader(this);
}


std::any ExampleParser::HeaderContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<ExampleVisitor*>(visitor))
    return parserVisitor->visitHeader(this);
  else
    return visitor->visitChildren(this);
}

ExampleParser::HeaderContext* ExampleParser::header() {
  HeaderContext *_localctx = _tracker.createInstance<HeaderContext>(_ctx, getState());
  enterRule(_localctx, 4, ExampleParser::RuleHeader);
  size_t _la = 0;

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    size_t alt;
    enterOuterAlt(_localctx, 1);
    setState(51);
    match(ExampleParser::HASHES);
    setState(55);
    _errHandler->sync(this);
    alt = getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 2, _ctx);
    while (alt != 2 && alt != atn::ATN::INVALID_ALT_NUMBER) {
      if (alt == 1) {
        setState(52);
        match(ExampleParser::WS); 
      }
      setState(57);
      _errHandler->sync(this);
      alt = getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 2, _ctx);
    }
    setState(59); 
    _errHandler->sync(this);
    _la = _input->LA(1);
    do {
      setState(58);
      inline_();
      setState(61); 
      _errHandler->sync(this);
      _la = _input->LA(1);
    } while ((((_la & ~ 0x3fULL) == 0) &&
      ((1ULL << _la) & 458096) != 0));
    setState(63);
    match(ExampleParser::NEWLINE);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- ListContext ------------------------------------------------------------------

ExampleParser::ListContext::ListContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}


size_t ExampleParser::ListContext::getRuleIndex() const {
  return ExampleParser::RuleList;
}

void ExampleParser::ListContext::copyFrom(ListContext *ctx) {
  ParserRuleContext::copyFrom(ctx);
}

//----------------- UnorderedListContext ------------------------------------------------------------------

std::vector<ExampleParser::ListItemContext *> ExampleParser::UnorderedListContext::listItem() {
  return getRuleContexts<ExampleParser::ListItemContext>();
}

ExampleParser::ListItemContext* ExampleParser::UnorderedListContext::listItem(size_t i) {
  return getRuleContext<ExampleParser::ListItemContext>(i);
}

ExampleParser::UnorderedListContext::UnorderedListContext(ListContext *ctx) { copyFrom(ctx); }

void ExampleParser::UnorderedListContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<ExampleListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterUnorderedList(this);
}
void ExampleParser::UnorderedListContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<ExampleListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitUnorderedList(this);
}

std::any ExampleParser::UnorderedListContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<ExampleVisitor*>(visitor))
    return parserVisitor->visitUnorderedList(this);
  else
    return visitor->visitChildren(this);
}
ExampleParser::ListContext* ExampleParser::list() {
  ListContext *_localctx = _tracker.createInstance<ListContext>(_ctx, getState());
  enterRule(_localctx, 6, ExampleParser::RuleList);

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    size_t alt;
    _localctx = _tracker.createInstance<ExampleParser::UnorderedListContext>(_localctx);
    enterOuterAlt(_localctx, 1);
    setState(66); 
    _errHandler->sync(this);
    alt = 1;
    do {
      switch (alt) {
        case 1: {
              setState(65);
              listItem();
              break;
            }

      default:
        throw NoViableAltException(this);
      }
      setState(68); 
      _errHandler->sync(this);
      alt = getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 4, _ctx);
    } while (alt != 2 && alt != atn::ATN::INVALID_ALT_NUMBER);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- ListItemContext ------------------------------------------------------------------

ExampleParser::ListItemContext::ListItemContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* ExampleParser::ListItemContext::DASH() {
  return getToken(ExampleParser::DASH, 0);
}

tree::TerminalNode* ExampleParser::ListItemContext::NEWLINE() {
  return getToken(ExampleParser::NEWLINE, 0);
}

std::vector<tree::TerminalNode *> ExampleParser::ListItemContext::WS() {
  return getTokens(ExampleParser::WS);
}

tree::TerminalNode* ExampleParser::ListItemContext::WS(size_t i) {
  return getToken(ExampleParser::WS, i);
}

ExampleParser::CheckboxContext* ExampleParser::ListItemContext::checkbox() {
  return getRuleContext<ExampleParser::CheckboxContext>(0);
}

std::vector<ExampleParser::InlineContext *> ExampleParser::ListItemContext::inline_() {
  return getRuleContexts<ExampleParser::InlineContext>();
}

ExampleParser::InlineContext* ExampleParser::ListItemContext::inline_(size_t i) {
  return getRuleContext<ExampleParser::InlineContext>(i);
}


size_t ExampleParser::ListItemContext::getRuleIndex() const {
  return ExampleParser::RuleListItem;
}

void ExampleParser::ListItemContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<ExampleListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterListItem(this);
}

void ExampleParser::ListItemContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<ExampleListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitListItem(this);
}


std::any ExampleParser::ListItemContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<ExampleVisitor*>(visitor))
    return parserVisitor->visitListItem(this);
  else
    return visitor->visitChildren(this);
}

ExampleParser::ListItemContext* ExampleParser::listItem() {
  ListItemContext *_localctx = _tracker.createInstance<ListItemContext>(_ctx, getState());
  enterRule(_localctx, 8, ExampleParser::RuleListItem);
  size_t _la = 0;

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    size_t alt;
    enterOuterAlt(_localctx, 1);
    setState(70);
    match(ExampleParser::DASH);
    setState(72); 
    _errHandler->sync(this);
    alt = 1;
    do {
      switch (alt) {
        case 1: {
              setState(71);
              match(ExampleParser::WS);
              break;
            }

      default:
        throw NoViableAltException(this);
      }
      setState(74); 
      _errHandler->sync(this);
      alt = getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 5, _ctx);
    } while (alt != 2 && alt != atn::ATN::INVALID_ALT_NUMBER);
    setState(82);
    _errHandler->sync(this);

    switch (getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 7, _ctx)) {
    case 1: {
      setState(76);
      checkbox();
      setState(78); 
      _errHandler->sync(this);
      alt = 1;
      do {
        switch (alt) {
          case 1: {
                setState(77);
                match(ExampleParser::WS);
                break;
              }

        default:
          throw NoViableAltException(this);
        }
        setState(80); 
        _errHandler->sync(this);
        alt = getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 6, _ctx);
      } while (alt != 2 && alt != atn::ATN::INVALID_ALT_NUMBER);
      break;
    }

    default:
      break;
    }
    setState(85); 
    _errHandler->sync(this);
    _la = _input->LA(1);
    do {
      setState(84);
      inline_();
      setState(87); 
      _errHandler->sync(this);
      _la = _input->LA(1);
    } while ((((_la & ~ 0x3fULL) == 0) &&
      ((1ULL << _la) & 458096) != 0));
    setState(89);
    match(ExampleParser::NEWLINE);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- CheckboxContext ------------------------------------------------------------------

ExampleParser::CheckboxContext::CheckboxContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* ExampleParser::CheckboxContext::LBRACK() {
  return getToken(ExampleParser::LBRACK, 0);
}

tree::TerminalNode* ExampleParser::CheckboxContext::RBRACK() {
  return getToken(ExampleParser::RBRACK, 0);
}

tree::TerminalNode* ExampleParser::CheckboxContext::WS() {
  return getToken(ExampleParser::WS, 0);
}


size_t ExampleParser::CheckboxContext::getRuleIndex() const {
  return ExampleParser::RuleCheckbox;
}

void ExampleParser::CheckboxContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<ExampleListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterCheckbox(this);
}

void ExampleParser::CheckboxContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<ExampleListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitCheckbox(this);
}


std::any ExampleParser::CheckboxContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<ExampleVisitor*>(visitor))
    return parserVisitor->visitCheckbox(this);
  else
    return visitor->visitChildren(this);
}

ExampleParser::CheckboxContext* ExampleParser::checkbox() {
  CheckboxContext *_localctx = _tracker.createInstance<CheckboxContext>(_ctx, getState());
  enterRule(_localctx, 10, ExampleParser::RuleCheckbox);
  size_t _la = 0;

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(91);
    match(ExampleParser::LBRACK);
    setState(92);
    _la = _input->LA(1);
    if (!((((_la & ~ 0x3fULL) == 0) &&
      ((1ULL << _la) & 131078) != 0))) {
    _errHandler->recoverInline(this);
    }
    else {
      _errHandler->reportMatch(this);
      consume();
    }
    setState(93);
    match(ExampleParser::RBRACK);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- QuoteContext ------------------------------------------------------------------

ExampleParser::QuoteContext::QuoteContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

std::vector<tree::TerminalNode *> ExampleParser::QuoteContext::GT() {
  return getTokens(ExampleParser::GT);
}

tree::TerminalNode* ExampleParser::QuoteContext::GT(size_t i) {
  return getToken(ExampleParser::GT, i);
}

std::vector<tree::TerminalNode *> ExampleParser::QuoteContext::NEWLINE() {
  return getTokens(ExampleParser::NEWLINE);
}

tree::TerminalNode* ExampleParser::QuoteContext::NEWLINE(size_t i) {
  return getToken(ExampleParser::NEWLINE, i);
}

std::vector<tree::TerminalNode *> ExampleParser::QuoteContext::WS() {
  return getTokens(ExampleParser::WS);
}

tree::TerminalNode* ExampleParser::QuoteContext::WS(size_t i) {
  return getToken(ExampleParser::WS, i);
}

std::vector<ExampleParser::InlineContext *> ExampleParser::QuoteContext::inline_() {
  return getRuleContexts<ExampleParser::InlineContext>();
}

ExampleParser::InlineContext* ExampleParser::QuoteContext::inline_(size_t i) {
  return getRuleContext<ExampleParser::InlineContext>(i);
}


size_t ExampleParser::QuoteContext::getRuleIndex() const {
  return ExampleParser::RuleQuote;
}

void ExampleParser::QuoteContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<ExampleListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterQuote(this);
}

void ExampleParser::QuoteContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<ExampleListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitQuote(this);
}


std::any ExampleParser::QuoteContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<ExampleVisitor*>(visitor))
    return parserVisitor->visitQuote(this);
  else
    return visitor->visitChildren(this);
}

ExampleParser::QuoteContext* ExampleParser::quote() {
  QuoteContext *_localctx = _tracker.createInstance<QuoteContext>(_ctx, getState());
  enterRule(_localctx, 12, ExampleParser::RuleQuote);
  size_t _la = 0;

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    size_t alt;
    enterOuterAlt(_localctx, 1);
    setState(106); 
    _errHandler->sync(this);
    alt = 1;
    do {
      switch (alt) {
        case 1: {
              setState(95);
              match(ExampleParser::GT);
              setState(97);
              _errHandler->sync(this);

              switch (getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 9, _ctx)) {
              case 1: {
                setState(96);
                match(ExampleParser::WS);
                break;
              }

              default:
                break;
              }
              setState(100); 
              _errHandler->sync(this);
              _la = _input->LA(1);
              do {
                setState(99);
                inline_();
                setState(102); 
                _errHandler->sync(this);
                _la = _input->LA(1);
              } while ((((_la & ~ 0x3fULL) == 0) &&
                ((1ULL << _la) & 458096) != 0));
              setState(104);
              match(ExampleParser::NEWLINE);
              break;
            }

      default:
        throw NoViableAltException(this);
      }
      setState(108); 
      _errHandler->sync(this);
      alt = getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 11, _ctx);
    } while (alt != 2 && alt != atn::ATN::INVALID_ALT_NUMBER);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- ParagraphContext ------------------------------------------------------------------

ExampleParser::ParagraphContext::ParagraphContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* ExampleParser::ParagraphContext::NEWLINE() {
  return getToken(ExampleParser::NEWLINE, 0);
}

std::vector<ExampleParser::InlineContext *> ExampleParser::ParagraphContext::inline_() {
  return getRuleContexts<ExampleParser::InlineContext>();
}

ExampleParser::InlineContext* ExampleParser::ParagraphContext::inline_(size_t i) {
  return getRuleContext<ExampleParser::InlineContext>(i);
}


size_t ExampleParser::ParagraphContext::getRuleIndex() const {
  return ExampleParser::RuleParagraph;
}

void ExampleParser::ParagraphContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<ExampleListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterParagraph(this);
}

void ExampleParser::ParagraphContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<ExampleListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitParagraph(this);
}


std::any ExampleParser::ParagraphContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<ExampleVisitor*>(visitor))
    return parserVisitor->visitParagraph(this);
  else
    return visitor->visitChildren(this);
}

ExampleParser::ParagraphContext* ExampleParser::paragraph() {
  ParagraphContext *_localctx = _tracker.createInstance<ParagraphContext>(_ctx, getState());
  enterRule(_localctx, 14, ExampleParser::RuleParagraph);
  size_t _la = 0;

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(111); 
    _errHandler->sync(this);
    _la = _input->LA(1);
    do {
      setState(110);
      inline_();
      setState(113); 
      _errHandler->sync(this);
      _la = _input->LA(1);
    } while ((((_la & ~ 0x3fULL) == 0) &&
      ((1ULL << _la) & 458096) != 0));
    setState(115);
    match(ExampleParser::NEWLINE);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- FencedCodeBlockContext ------------------------------------------------------------------

ExampleParser::FencedCodeBlockContext::FencedCodeBlockContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* ExampleParser::FencedCodeBlockContext::FENCED_CODE() {
  return getToken(ExampleParser::FENCED_CODE, 0);
}

tree::TerminalNode* ExampleParser::FencedCodeBlockContext::NEWLINE() {
  return getToken(ExampleParser::NEWLINE, 0);
}


size_t ExampleParser::FencedCodeBlockContext::getRuleIndex() const {
  return ExampleParser::RuleFencedCodeBlock;
}

void ExampleParser::FencedCodeBlockContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<ExampleListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterFencedCodeBlock(this);
}

void ExampleParser::FencedCodeBlockContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<ExampleListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitFencedCodeBlock(this);
}


std::any ExampleParser::FencedCodeBlockContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<ExampleVisitor*>(visitor))
    return parserVisitor->visitFencedCodeBlock(this);
  else
    return visitor->visitChildren(this);
}

ExampleParser::FencedCodeBlockContext* ExampleParser::fencedCodeBlock() {
  FencedCodeBlockContext *_localctx = _tracker.createInstance<FencedCodeBlockContext>(_ctx, getState());
  enterRule(_localctx, 16, ExampleParser::RuleFencedCodeBlock);

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(117);
